# os-installer

data/: meson.build  os-installer-wrapper
src/: Installer.gresource.xml  main.c  meson.build
